    - Added "abc9" pass for timing-aware techmapping (experimental, FPGA only, no FFs)
    - Added "synth_xilinx -abc9" (experimental)
    - Added "synth_ice40 -abc9" (experimental)
    - Added "synth -abc9" (experimental)
    - Added "script -scriptwire
    - "synth_xilinx" to now infer wide multiplexers (-widemux <min> to enable)
    - Added automatic gzip decompression for frontends

Yosys 0.8 .. Yosys 0.8-dev
--------------------------

 * Various
    - Added $changed support to read_verilog
    - Added "write_edif -attrprop"
    - Added "ice40_unlut" pass
    - Added "opt_lut" pass
    - Added "synth_ice40 -relut"
    - Added "synth_ice40 -noabc"
    - Added "gate2lut.v" techmap rule
    - Added "rename -src"
    - Added "equiv_opt" pass
    - Added "shregmap -tech xilinx"
    - Added "read_aiger" frontend
    - Added "muxcover -mux{4,8,16}=<cost>"
    - Added "muxcover -dmux=<cost>"
    - Added "muxcover -nopartial"
    - Added "muxpack" pass
    - Added "pmux2shiftx -norange"
    - Added "synth_xilinx -nocarry"
    - Added "synth_xilinx -nowidelut"
    - Added "synth_ecp5 -nowidelut"
    - "synth_xilinx" to now infer hard shift registers (-nosrl to disable)
    - Fixed sign extension of unsized constants with 'bx and 'bz MSB


Yosys 0.7 .. Yosys 0.8
----------------------

 * Various
    - Many bugfixes and small improvements
    - Strip debug symbols from installed binary
    - Replace -ignore_redef with -[no]overwrite in front-ends
    - Added write_verilog hex dump support, add -nohex option
    - Added "write_verilog -decimal"
    - Added "scc -set_attr"
    - Added "verilog_defines" command
    - Remember defines from one read_verilog to next
    - Added support for hierarchical defparam
    - Added FIRRTL back-end
    - Improved ABC default scripts
    - Added "design -reset-vlog"
    - Added "yosys -W regex", "yosys -w regex", and "yosys -e regex"
    - Added Verilog $rtoi and $itor support
    - Added "check -initdrv"